# graph-lab

./: .gitignore  README.md  pyproject.toml  requirements.txt
algoritmos/kahn_sort/: README.md  entrada_customizada.py
algoritmos/kahn_sort/casos/: ciclo_simples.json  dag_simples.json
algoritmos/kahn_sort/testes/: test_kahn_sort.py
algoritmos/topobloom_sort/: README.md  exemplos.py  topobloom_sort.py
algoritmos/topobloom_sort/casos/: ciclo_simples.json  dag_pedagogico_simples.json  desempate_importancia.json  regressao_bloom.json
docs/: convencoes.md  glossario-grafos.md  roadmap.md
