[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-lab"
version = "0.1.0"
description = "Laboratório didático de algoritmos em grafos em Python"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = [
  "algoritmos",
]
